--- a/README
+++ b/README
@@ -2,5 +2,8 @@
 | postkantoor |
 ---------------
 
+# regie
+https://de.wikipedia.org/wiki/Regie
+
 # politiebureau
 https://nl.wikipedia.org/wiki/Politiebureau
